[ FEATURE ] Completed strategy load and symbol load (#40)
* Completed strategy load and symbol load

* Added data fetch from cliend

---------

Co-authored-by: dharam.dev <dharam.dev@devenv.local>