@@ -39,6 +39,7 @@ ext {
     swaggerUiVersion = "5.32.6"
     copperVersion = "8.0.0"
     lombokMapstruct = "0.2.0"
+    temporalVersion = "1.36.0"
 }
 
 dependencies {
@@ -57,8 +58,11 @@ dependencies {
     implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:$openApi"
     implementation "io.jsonwebtoken:jjwt-api:$jwtVersion"
     implementation 'org.projectlombok:lombok'
-    implementation "org.copper-engine:copper-coreengine:$copperVersion"
-    implementation "org.copper-engine:copper-spring:$copperVersion"
+
+    implementation "io.temporal:temporal-sdk:$temporalVersion"
+    implementation "io.temporal:temporal-spring-boot-starter:$temporalVersion"
+
+    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
 
     runtimeOnly "io.jsonwebtoken:jjwt-impl:$jwtVersion"
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:$jwtVersion"
@@ -130,7 +134,12 @@ spotless {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs '--sun-misc-unsafe-memory-access=allow'
     finalizedBy jacocoTestReport
+}
+
+bootRun {
+    jvmArgs '--sun-misc-unsafe-memory-access=allow'
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -169,7 +178,7 @@ tasks.named('jacocoTestCoverageVerification') {
             limit {
                 counter = 'LINE'
                 value = 'COVEREDRATIO'
-                minimum = 0.95
+                minimum = 0.98
             }
         }
     }
